--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@types/node"],
-    "extensions": [".vue", ".ts"]
+    "types": ["@nuxt/types", "@types/node"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
